# screen_time

./: .gitignore  CMakeLists.txt  FormatUtils.cpp  FormatUtils.h  README.md  Resource.rc  Tracker.cpp  Tracker.h  WindowManager.cpp  WindowManager.h  app.manifest  main.cpp
